...
        slivers: [
          ThkNavBar.large(
            title: l10n.notes,
            trailing: CupertinoButton(
              padding: EdgeInsets.zero,
              onPressed: () => _createNoteInUncategorized(context, ref),
              key: const ValueKey('add_note_button'),
              child: Icon(AppIcons.add),
            ),
          ),
          CupertinoSliverRefreshControl(
            onRefresh: () async {
              await _load();
...
